# UrDesign

./: README
app/config/: gimpguiconfig.c  gimpguiconfig.h  gimprc-blurbs.h
app/display/: gimptooltransformgrid.c  gimptooltransformgrid.h
app/path/: gimppath-corners.c  gimppath-corners.h  gimppathboolean.c  gimppathboolean.h  gimpstroke.c  gimpstroke.h  meson.build  path-enums.h
app/tests/: meson.build  test-shape-fusion.c  test-transform-grid.c  test-xcf.c
app/tools/: gimp-tools.c  gimpcornersculptoptions.c  gimpcornersculptoptions.h  gimpcornersculpttool.c  gimpcornersculpttool.h  gimpintelliselectoptions.c  gimpintelliselectoptions.h  gimpintelliselecttool.c  gimpintelliselecttool.h  gimpshapefusionoptions.c  gimpshapefusionoptions.h  gimpshapefusiontool.c  gimpshapefusiontool.h  gimptransformgridoptions.c  kimpshapefusionoptions.c  kimpshapefusionoptions.h  meson.build  tools-enums.c  tools-enums.h  tools-types.h
app/widgets/: gimphelp-ids.h
app/xcf/: xcf-load.c  xcf-save.c
docs/: CONFLICT_RESOLUTION.md  ROADMAP.md  intelliselect.md
libgimpwidgets/: gimpicons.h
plug-ins/: meson.build
plug-ins/intelleselect/: intelleselect.c  meson.build
plug-ins/intelliselect/: intelliselect-backend.c  intelliselect-backend.h  meson.build
plug-ins/intelliselect/tests/: meson.build  test-intelliselect-backend.c
